Partway through refactoring model to use Component and writing Component tests

--- a/biotrack/pytest.ini
+++ b/biotrack/pytest.ini
@@ -1,6 +1,10 @@
 # Initailise pytests to exclude slow tests where Models are 
 # initialised from urls.
 [pytest]
-# Ignores test with Model instatiation.
+# Ignores tests with Model instatiation.
 # Instead use tests with pickled models.
 addopts = --ignore=tests/test_model.py
+# Alternatively put slow tests in a separate directory and
+# set test directory explicitly using:
+# testpaths = tests/tests_fast
+# and ignoring tests/tests_slow
