--- a/biotrack/pytest.ini
+++ b/biotrack/pytest.ini
@@ -3,7 +3,7 @@
 [pytest]
 # Ignores tests with Model instatiation.
 # Instead use tests with pickled models.
-addopts = --ignore=tests/not_in_use/test_model_slow.py
+addopts = --ignore=tests/slow_tests/
 # Alternatively put slow tests in a separate directory and
 # set test directory explicitly using:
 # testpaths = tests/tests_fast
