Remove compiled and temporary files from git.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 # Compiled python modules
 *.pyc
+*~
+*#
+*cache*
 
 # Setuptools distribution folder.
 /dist/
+
+# Test cache
+/tests/__pycache__/
+/.cache/
 
 # Python egg metadata, regenerated from source files by setuptools.
 /biotrack.egg-info/
