--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,14 @@
 # Compiled python modules
 *.pyc
+# Temp files
 *~
 *#*
 *cache*
-
 # Setuptools distribution folder.
 /dist/
-
 # Test cache
-/tests/__pycache__/
+tests/*pycache*/
 /.cache/
-
 # Python egg metadata, regenerated from source files by setuptools.
 /biotrack.egg-info/
 
