--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,5 @@
 tests/__pycache__/
 /.cache/
 # Python egg metadata, regenerated from source files by setuptools.
-/biotrack.egg-info/
+/biotrack.egg-info
 
